# WiseWowRecorderEMG

./: CMakeLists.txt  README.txt  SensorEMG.cpp  SensorEMG.h  main_scr2.cpp  main_src.cpp  single.cpp  single_plot.cpp  single_plot_src.cpp  single_plot_v1.cpp
src/: mainRT.cpp
